[package]
name = "bevy-fmod-demos"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"
description = "Demo applications showcasing FMOD audio integration in Bevy game engine using bevy_fmod"

[dependencies]
bevy_fmod = { path = "../bevy_fmod" }
bevy = { version = "0.16", features = ["default"] }

[[bin]]
name = "minimal"

[[bin]]
name = "audio_control"

[[bin]]
name = "spatial"

[[bin]]
name = "parameters"

[[bin]]
name = "manual_sound_test"

[[bin]]
name = "simple_sound_test"